[workspace]
members = ["indexer", "server", "database", "bytes"]

[workspace.package]
authors = ["hexcowboy <hex@cowboy.dev>"]
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/racer-wtf/backend"

[workspace.dependencies]
ethers = { version = "1.0.2", features = ["ws"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = "0.6"
bigdecimal = "0.3.0"
