[package]
name = "database"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }
tokio = { workspace = true }

[dev-dependencies]
testcontainers = "0.14.0"
