[package]
name = "indexer"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
database = { path = "../database" }
bytes = { path = "../bytes" }
dotenvy.workspace = true
ethers = { workspace = true, features = ["rustls"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bigdecimal.workspace = true
hex = "0.4.3"
sqlx.workspace = true
